# radar

./: .gitignore  Cargo.toml  README.md  build.rs  radios.yaml
src/: action.rs  config.rs  main.rs  mp3.rs
ui/: PlaybackLine.slint  RadioEntry.slint  ScrollBox.slint  SearchBar.slint  Window.slint
