[package]
name = "radio"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
minimp3 = "0.5.1"
reqwest = { version = "0.11.23", features = ["blocking"] }
rodio = "0.17.3"
serde = { version = "1.0.195", features = ["derive"] }
serde_yaml = "0.9.30"
slint = "1.3.2"

[build-dependencies]
slint-build = "1.3.2"
winres = "0.1.12"
